# ChangeLog for net-p2p/litecoind
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  litecoind-0.6.3c.ebuild:
  Support building from git.

*litecoind-0.6.3c (03 May 2013)

  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -files/0.4.2-Makefile.gentoo, -litecoind-0.6.3a.ebuild,
  +litecoind-0.6.3c.ebuild, files/litecoin.confd, files/litecoin.initd:
  Version bump + cleanup.

*litecoind-0.6.3a (08 Feb 2013)

  08 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +files/0.4.2-Makefile.gentoo, +litecoind-0.6.3a.ebuild, +files/litecoin.conf,
  +files/litecoin.confd, +files/litecoin.initd, +files/litecoind.logrotate,
  +metadata.xml:
  Initial import. Based on bitcoind-0.7.2.ebuild from the bitcoin overlay..
