@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*litecoind-9999 (03 May 2013)
+
+  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  +litecoind-9999.ebuild:
+  Add live ebuild.
+
   03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
   litecoind-0.6.3c.ebuild:
   Support building from git.
